--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
-/.yarn/
+
+#yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 
 # testing
 /coverage
