--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fontsource/plus-jakarta-sans": "^4.5.9",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "formik": "^2.2.9",
+    "framer-motion": "^7.4.0",
+    "js-cookie": "^3.0.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
